<resources>
    <string name="app_name">Jensen elektriske as</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="cases">Saker</string>
    <string name="form">Skjema</string>
    <string name="calendar">Kalender</string>
    <string name="previous">Previous</string>
    <string name="ny_skjema">Opprett Skjema</string>
    <string name="set_date">Sett Dato</string>
    <string name="cancel">Canseler</string>


    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="logg_inn">Innlogging</string>
    <string name="button1">Logg inn</string>
    <string name="button2">Registrer</string>
    <string name="button" />
    <string name="todo">TODO</string>
    <string name="email">Email</string>
    <string name="opprett_bruker">Opprett Bruker</string>
    <string name="opprett">Opprett</string>
    <string name="avbryt">Avbryt</string>
    <string name="register">REGISTER</string>
    <string name="login_email_hint">Email</string>
    <string name="login_password_hint">Password</string>
    <string name="signup_login_hint">Already have an account? Sign In</string>
    <string name="login_signup_hint">Don\'t have an account? Sign Up</string>
    <string name="login">login</string>
    <string name="registrer">registrer</string>
    <string name="logo">Logo</string>
    <string name="passord">Passord</string>
    <string name="gjenta_passord">Gjenta passord</string>
    <string name="bekreft_passord">Bekreft passord</string>
    <string name="logg_ut">Logg ut</string>
    <string name="eller">eller</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="adresse">Adresse:</string>
    <string name="nei">Nei</string>
    <string name="benevnelse">Benevnelse</string>
    <string name="PDF">PDF</string>
    <string name="sett_ny_dato">Varsling</string>
    <string name="utf_r_kontroll">Kontroll</string>
    <string name="alarmoverf_ring_til">Alarmoverføring til:</string>
    <string name="sted">sted</string>
    <string name="legg_til_vedlegg">Vedlegg</string>
    <string name="notify_desc">Utfør kontroll hos:</string>
    <string name="notify_desc_date">Varsel ble sendt:</string>
    <string name="ja">Ja</string>
    <string name="slett_skjema">Slett skjema</string>

</resources>