<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/white"
        android:clickable="true"
        android:focusable="true"
        android:id="@+id/all_form">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="300dp">

            <Button
                android:id="@+id/savePdf"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:drawableEnd="@drawable/ic_download_arrow"
                android:text="@string/PDF"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.888"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.063" />

            <TextView
                android:id="@+id/tittel_text"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.075"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.122" />

            <EditText
                android:id="@+id/kunde_text_edit"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:hint="kunde"
                android:importantForAutofill="no"
                android:inputType="text"
                android:textSize="15sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.919"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.953" />

            <TextView
                android:id="@+id/kunde_text"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="Kunde / Tiltakshaver:"
                android:textColor="@color/black"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.061"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.444" />

            <TextView
                android:id="@+id/anlegg_text"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="Anleggssted:"
                android:textColor="@color/black"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.061"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.797" />

            <EditText
                android:id="@+id/anlegg_text_edit"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:hint="@string/sted"
                android:importantForAutofill="no"
                android:inputType="text"
                android:textSize="15sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.919"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.437" />

            <TextView
                android:id="@+id/adresse_text"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/adresse"
                android:textColor="@color/black"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.061"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.638" />

            <EditText
                android:id="@+id/adresse_edit_text"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:hint="adresse"
                android:importantForAutofill="no"
                android:inputType="text"
                android:textSize="15sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.919"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.609" />

            <TextView
                android:id="@+id/overforing_text"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="Alarmoverføring til:"
                android:textColor="@color/black"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.061"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.956" />

            <EditText
                android:id="@+id/overforing_edit_text"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:hint="sted"
                android:importantForAutofill="no"
                android:inputType="text"
                android:textSize="15sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.895"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.778" />

        </androidx.constraintlayout.widget.ConstraintLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:padding="5dp"
            android:id="@+id/benevnelse_overskrift">
            <TextView
                android:id="@+id/benevnelse"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:text="@string/benevnelse"
                android:textSize="20sp"
                android:textColor="@color/blueJ"
                android:layout_weight="1"
                android:layout_gravity="end"/>
            <TextView
                android:id="@+id/ja"
                android:layout_width="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_height="wrap_content"
                android:textColor="@color/blueJ"
                android:text="@string/ja"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/nei"
                android:layout_marginStart="3dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/blueJ"
                android:layout_gravity="end"
                android:text="@string/nei"
                android:textSize="20sp"
                android:layout_weight="1"/>
        </LinearLayout>

        <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:id="@+id/formLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:orientation="vertical"
            android:gravity="bottom">
        </LinearLayout>
    </ScrollView>
    </LinearLayout>
</layout>